# Candidates-roborregos

./: CMakeLists.txt  Candidates_Roborregos_CPP.cpp  README.md  diagram.json  platformio.ini
headers/: InterruptManager.h  PrintTerminal.h
headers/IMU/: IMU.h
headers/Motors/: Motor.h
headers/Odometry/: Driver.h  Odometry.h  PID.h
headers/Sensors/: ColorSensor.h  EncoderSensor.h  LineSensor.h  SensorBase.h  Sensors.h  UltrasonicSensor.h
lib/Pistas/: LineFollower.cpp  LineFollower.h  PistaA.cpp  PistaA.h  PistaC.cpp  PistaC.h
lib/Utils/: Constants.h  Odometry.cpp  Odometry.h  SoftTimer.cpp  SoftTimer.h
lib/sensors/: ColorSensor.cpp  ColorSensor.h  EncoderSensor.cpp  EncoderSensor.h  LineFollower.cpp  LineFollower.h  LineSensor.cpp  LineSensor.h  Motors.cpp  Motors.h  MyLED.cpp  MyLED.h  UltrasonicSensor.h  UltrasonicSensors.cpp
src/: Candidates_Roborregos_CPP.cpp  main.cpp
src/IMU/: IMU.cpp
src/Motors/: Motor.cpp
src/Odometry/: Driver.cpp  Odometry.cpp  PID.cpp
src/Sensors/: ColorSensor.cpp  EncoderSensor.cpp  LineSensor.cpp  UltrasonicSensor.cpp
src/Utils/: Constants.cpp  InterruptManager.cpp  PrintTerminal.cpp
